<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="UsingOnClickInXml" >

    <EditText
        android:id="@+id/input_edt"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:clickable="false"
        android:layout_above="@id/result_edt"
        android:cursorVisible="true"
        android:importantForAutofill="no"
        android:inputType="none"
        android:scrollHorizontally="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:verticalScrollbarPosition="right"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/result_edt"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:padding="8dp"
        android:ellipsize="end"
        android:textSize="25sp"
        android:focusable="false"
        android:clickable="false"
        android:inputType="none"
        android:layout_above="@+id/buttonLayout"
        tools:ignore="LabelFor" />
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:weightSum="4">
            <Button
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="buttonClick"
                style="?attr/borderlessButtonStyle"
                android:text="@string/clear"
                android:textSize="20sp"
                android:textColor="@color/special_button_color"
               />
            <Button
                android:id="@+id/buttonRoot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/root"
                android:onClick="buttonClick"
                android:textSize="20sp"
                android:textColor="@color/special_button_color"/>
            <Button
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/back"
                android:textSize="30sp"
                android:textColor="@color/special_button_color"
                android:onClick="buttonClick"/>
            <Button
                android:id="@+id/buttonDevide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/divivde"
                android:onClick="buttonClick"
                android:textSize="20sp"
                android:textColor="@color/special_button_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:weightSum="4">
            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="buttonClick"
                style="?attr/borderlessButtonStyle"
                android:text="@string/seven"
                android:textSize="20sp"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonEight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/eight"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonNine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/nine"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/button_color"/>

            <Button
                android:id="@+id/buttonMultiply"
                style="?attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="buttonClick"
                android:text="@string/multiply"
                android:textSize="20sp"
                android:textColor="@color/special_button_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:weightSum="4">
            <Button
                android:id="@+id/buttonFour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="buttonClick"
                style="?attr/borderlessButtonStyle"
                android:text="@string/four"
                android:textSize="20sp"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonFive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/five"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonSix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/six"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/minus"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/special_button_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:weightSum="4">
            <Button
                android:id="@+id/buttonOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="buttonClick"
                style="?attr/borderlessButtonStyle"
                android:text="@string/one"
                android:textSize="20sp"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/two"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/three"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonPluse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/pluse"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/special_button_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:weightSum="4">
            <Button
                android:id="@+id/buttonDoubleZero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="buttonClick"
                style="?attr/borderlessButtonStyle"
                android:text="@string/doubleZero"
                android:textSize="20sp"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonZero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/zero"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonDot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/dot"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/button_color"/>
            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/borderlessButtonStyle"
                android:text="@string/equal"
                android:textSize="20sp"
                android:onClick="buttonClick"
                android:textColor="@color/special_button_color"/>
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>